--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/js-cookie": "^3.0.6",
+		"autoprefixer": "^10.4.19",
+		"postcss": "^8.4.40",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.7",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.7.2",
-		"js-cookie": "^3.0.5"
+		"chart.js": "^4.4.3",
+		"chartjs-adapter-date-fns": "^3.0.0",
+		"date-fns": "^3.6.0",
+		"js-cookie": "^3.0.5",
+		"svelte-chartjs": "^3.1.5"
 	}
 }
