--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"chart.js": "^4.4.3",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"date-fns": "^3.6.0",
+		"dotenv": "^16.4.5",
 		"js-cookie": "^3.0.5",
 		"svelte-chartjs": "^3.1.5"
 	}
